# ambs

./: Doxyfile  README.md
.github/workflows/: build.yml  industrial_ci_action.yml
ambs/: CMakeLists.txt  package.xml
ambs_components/: CMakeLists.txt  package.xml  setup.py
ambs_components/include/ambs_calculators/comparators/: float_param_comparator.h
ambs_components/include/ambs_calculators/differentiators/: diff_float_temporal.h  diff_pose_temporal.h  stopwatch.h
ambs_components/include/ambs_components/ambs_calculators/comparators/: edge_detector.h  float_param_comparator.h
ambs_components/include/ambs_components/ambs_calculators/differentiators/: diff_float_temporal.h  diff_pose_temporal.h  stopwatch.h  timer.h
ambs_components/include/ambs_components/ambs_calculators/utils/: or_gate.h  signal_repeater.h
ambs_components/include/ambs_components/ambs_interpreters/command_interpreters/: velocity_interpreter.h
ambs_components/include/ambs_components/ambs_interpreters/location_interpreters/: odom_interpreter.h
ambs_components/include/ambs_components/ambs_loggers/: debug_logger.h
ambs_components/include/ambs_components/ambs_runners/: bench_braking.h  empty_runner.h  test1_braking.h
ambs_components/include/ambs_interpreters/command_interpreters/: velocity_interpreter.h
ambs_components/include/ambs_interpreters/location_interpreters/: odom_interpreter.cpp  odom_interpreter.h
ambs_components/include/ambs_runners/: test1_braking.h
ambs_components/scripts/: rosbagger_node
ambs_components/src/interpreters/command_interpreters/: velocity_interpreter.cpp
ambs_components/src/interpreters/location_interpreters/: odom_interpreter.cpp
ambs_components/src/loggers/: debug_logger.cpp  rosbagger.py
ambs_core/: CMakeLists.txt  package.xml  setup.py
ambs_core/include/ambs_base/: ambs_base.hpp
ambs_core/include/ambs_base_calculator/: ambs_base_calculator.hpp  ambs_default_calculator_interface.hpp
ambs_core/include/ambs_base_interface/: ambs_base_interface.hpp  ambs_boolean_interface.hpp
ambs_core/include/ambs_base_runner/: ambs_base_runner.h
ambs_core/include/ambs_core/ambs_base_calculator/: ambs_base_calculator.hpp  ambs_default_calculator_interface.hpp
ambs_core/include/ambs_core/ambs_base_interface/: ambs_base_interface.hpp  ambs_boolean_interface.hpp
ambs_core/include/ambs_core/ambs_base_runner/: ambs_base_runner.h
ambs_core/include/ambs_core/ambs_helper/: helper.h
ambs_core/src/: test_base.cpp
ambs_core/src/ambs_base/: ambs_base.cpp
ambs_core/src/python_base_classes/: base_logger.py
ambs_msgs/: CMakeLists.txt  package.xml
ambs_pluginlib/: CMakeLists.txt  package.xml
ambs_pluginlib/launch/calculators/: diff_float_temporal.launch  diff_pose_temporal.launch  rosbagger.launch  test_comp_float_param.launch  test_stopwatch.launch
ambs_pluginlib/launch/example_system/: test1_braking.launch
ambs_pluginlib/launch/interpreters/: odom_interpreter.launch  test_odom_interpreter.launch  velocity_interpreter.launch
ambs_pluginlib/launch/runners/: empty_runner.launch  test1_braking.launch  test_test1_braking.launch
ambs_pluginlib/plugins/: calculator_plugins.xml  interpreter_plugins.xml  runner_plugins.xml
ambs_pluginlib/src/calculators/comparators/: comp_float_param_nodelet.cpp  edge_detector_nodelet.cpp
ambs_pluginlib/src/calculators/differentiators/: diff_float_temporal_nodelet.cpp  diff_pose_temporal_nodelet.cpp  stopwatch_nodelet.cpp  timer_nodelet.cpp
ambs_pluginlib/src/calculators/utils/: or_gate_nodelet.cpp  signal_repeater_nodelet.cpp
ambs_pluginlib/src/interpreters/command_interpreters/: velocity_interpreter_nodelet.cpp
ambs_pluginlib/src/interpreters/location_interpreters/: odom_interpreter_nodelet.cpp
ambs_pluginlib/src/runners/: bench_braking_nodelet.cpp  empty_runner_nodelet.cpp  test1_braking_nodelet.cpp
ambs_pluginlib/test_configs/: test_components.yaml
ambs_sim_tests/: CMakeLists.txt  README.md  package.xml
ambs_sim_tests/config/: test1_braking.yaml
ambs_sim_tests/launch/: test1_braking.launch
ambs_sim_tests/launch/includes/: navigation.launch
ambs_sim_tests/tests/: test1_braking.py  test1_braking.test
ambs_tests/: CMakeLists.txt  package.xml
ambs_tests/launch/calculators/: rosbagger.launch
ambs_tests/launch/example_system/: test1_braking.launch
ambs_tests/launch/interpreters/: velocity_interpreter.launch
ambs_tests/launch/runners/: bench_braking.launch  empty_runner.launch  test_test1_braking.launch
ambs_tests/test/integration_tests/denso_use_case/: ambs_test_setup.xml  test_sp6mnp1_auto.test  test_sp6mnp1_rb1.cpp  test_sp6mnp1_rosbags.launch
ambs_tests/test/integration_tests/denso_use_case/bags/: bag1_good.bag  bag2_bad.bag
ambs_tests/test/integration_tests/denso_use_case/configs/: plotter.xml  rosparam_configs.yaml
ambs_tests/test/unit_tests/calculators/comparators/: test_comp_float_param.cpp  test_comp_float_param.test  test_edge_detector.cpp  test_edge_detector.test
ambs_tests/test/unit_tests/calculators/differentiators/: test_debug_logger_manually.test  test_diff_float_temporal.cpp  test_diff_float_temporal.test  test_diff_pose_temporal.cpp  test_diff_pose_temporal.test  test_stopwatch.cpp  test_stopwatch.test  test_timer.cpp  test_timer.test
ambs_tests/test/unit_tests/calculators/utils/: bringup_or_gate.xml  test_100_input_or_gate.test  test_10_input_or_gate.test  test_2_input_or_gate.test  test_or_gate.cpp  test_signal_repeater.cpp  test_signal_repeater.test
ambs_tests/test/unit_tests/core/helper/: test_helper.cpp  test_helper.test
ambs_tests/test_configs/: bench_braking.yaml  test_components.yaml
doc/html/: annotated.html  annotated_dup.js  classes.html  dir_000001_000013.html  dir_000005_000013.html  dir_000007_000013.html  dir_000010_000001.html  dir_000012_000001.html  dir_000020_000000.html  dir_015b419819ec635b433a6e9ef426f087.html  dir_0d52da7d200fa224b65ec1ae8e6d6d49.html  dir_179c4dda4459f282b3e601185707a2f9.html  dir_179c4dda4459f282b3e601185707a2f9_dep.map  dir_179c4dda4459f282b3e601185707a2f9_dep.md5  (+49 more)
docs/: README.md
docs/def/: doxygen.def
(+1265 files in other folders)
