<?xml version="1.0"?>
<package format="2">
  <name>ambs</name>
  <version>0.1.0</version>
  <description>The ambs metapackage</description>
  <maintainer email="tejas.kumar.shastha@ipa.fraunhofer.de">tejas</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>ambs_msgs</exec_depend>
  <exec_depend>ambs_core</exec_depend>
  <exec_depend>ambs_components</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
