<?xml version="1.0"?>
<package format="2">
  <name>ambs_sim_tests</name>
  <version>0.0.0</version>
  <description>Simulation testing of full tests</description>

  <maintainer email="tejas.kumar.shastha@ipa.fraunhofer.de">tejas</maintainer>

  <author email="tejas.kumar.shastha@ipa.fraunhofer.de">tejas</author>
  <author email="ruichao.wu@ipa.fraunhofer.de">ruichao</author>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cob_msgs</depend>
  <depend>timed_roslaunch</depend>

  <export>
  </export>
</package>
