<?xml version="1.0"?>
<package format="2">
  <name>ambs_sim_tests</name>
  <version>0.0.0</version>
  <description>Simulation testing of full tests</description>

  <maintainer email="tejas.kumar.shastha@ipa.fraunhofer.de">tejas</maintainer>

  <author email="tejas.kumar.shastha@ipa.fraunhofer.de">tejas</author>
  <author email="ruichao.wu@ipa.fraunhofer.de">ruichao</author>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslint</build_depend>

  <exec_depend>cob_msgs</exec_depend>
  <exec_depend>timed_roslaunch</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>
  <exec_depend>turtlebot3_navigation</exec_depend>
  <exec_depend>turtlebot3_bringup</exec_depend>
  <exec_depend>turtlebot3_fake</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
  </export>
</package>
