<?xml version="1.0"?>
<package format="2">
  <name>ambs_tests</name>
  <version>0.1.0</version>
  <description>Contains tests for other AMBS packages</description>

  <maintainer email="tejas.kumar.shastha@ipa.fraunhofer.de">ipa-kut</maintainer>
  <license>Apache 2.0</license>
  <author >ipa-kut</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>ambs_core</depend>
  <depend>ambs_components</depend>
  <depend>ambs_msgs</depend>
  <depend>ambs_pluginlib</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>roslint</depend>
  <depend>rqt_multiplot</depend>

  <test_depend>rostest</test_depend>

  <export>
  </export>
</package>
